[package]
name = "api_helix"
version = "0.1.0"
authors = ["alecsavvy <alecsavvy@outlook.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_core = { path = "../twitch_core" }
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = ["rt-core"]}
