[package]
name = "auth"
version = "0.1.0"
authors = ["alecsavvy <alecsavvy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_core = { path = "../twitch_core" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
